[tool.poetry]
name = "pa-telegram-bot"
version = "0.1.0"
description = "A Python-based Telegram bot for personal assistant"
authors = ["Kazan <andyswebking@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
telegram = "^0.0.1"
python-dotenv = "^1.0.1"
python-telegram-bot = {version = "20.0", extras = ["job-queue"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
