[tool.poetry]
name = "pa-telegram-bot"
version = "0.1.0"
description = "A Python-based Telegram bot for personal assistant"
authors = ["Kazan <andyswebking@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
python-telegram-bot = "20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
